<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collections"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_5"
        android:textSize="@dimen/text_size_small_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_5">
        <TextView
            android:id="@+id/tv_total_due"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/total_due"
            android:textSize="@dimen/text_size_very_small_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dsm_name"
            android:textSize="@dimen/text_size_very_small_12"/>

        <TextView
            android:id="@+id/tv_select_dsm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:padding="@dimen/margin_5"
            android:background="@drawable/search_edt"
            android:hint="@string/select_dsm_name"
            android:textSize="@dimen/text_size_very_small_12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/margin_5"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/app_color"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/retailor"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/total_os"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/no_of_bills_overdue"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/no_of_bills_outstanding"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/margin_5"
        android:id="@+id/rvCollections"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>