<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_5"
        android:textSize="@dimen/text_size_small_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_5"
        android:background="@color/app_color"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/dsm"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"
            android:text="@string/target" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"
            android:layout_height="wrap_content"
            android:text="@string/achieved" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/percentage"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/btg"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10"
            android:text="@string/per_day_avg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvDashboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                android:text="@string/sales_binder"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_very_small_14" />

            <!--<WebView
                android:id="@+id/web_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />-->
                <!--<com.jjoe64.graphview.GraphView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10" />-->
            <LinearLayout
                android:id="@+id/ll_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>