<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_main_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_margin_top"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_marginRight="@dimen/margin_70"
                android:layout_marginLeft="@dimen/margin_70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_new"
                    android:hint="@string/usercode_hint"
                    android:imeOptions="actionNext"
                    android:paddingLeft="5dp"
                    android:padding="@dimen/margin_5"
                    android:singleLine="true"
                    android:textColor="@color/gray_dark"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="@dimen/text_size_small"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/input_new"
                    android:hint="@string/password_hint"
                    android:imeActionLabel="Login"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/margin_5"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/gray_dark"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="@dimen/text_size_small"/>

                <LinearLayout
                    android:id="@+id/ll_rememberme"
                    android:layout_width="fill_parent"
                    android:layout_height="30dip"
                    android:layout_marginTop="@dimen/margin_login_chevk_box"
                    android:gravity="center_vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/ivCheck_rememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:src="@drawable/remeber_me_uncheck_box" />

                    <TextView
                        android:id="@+id/tvRemember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="@string/remember_me"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_size_large_22" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:drawablePadding="-10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/login_btn_bg" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCurrentversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size10"
        android:background="@drawable/bg_version"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size5"
        android:paddingLeft="@dimen/size15"
        android:paddingRight="@dimen/size15"
        android:paddingTop="@dimen/size5" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Release Date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_5"
            android:text=" : "
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_ver_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="Version No."
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_5"
            android:text=" : "
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10" />

        <TextView
            android:id="@+id/tvAppVerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small_10" />
    </LinearLayout>

</LinearLayout>